--- a/tsconfig.json
+++ b/tsconfig.json
@@ -100,6 +100,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["./src/**/*.ts", "quiz.ts"],
+  "include": ["./src/**/*.ts", "src/quiz.ts"],
   "exclude": ["node_modules"]
 }
